--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,25 @@
-title:            My Hacks
-description:      blog about my hacks
-logo:             user.jpg
+title:            Jipio
+description:      Deel spullen met vrienden
+logo:             //s3-eu-west-1.amazonaws.com/assets.jipio.com/beta/assets/img/favicon.ico
+assets:           //s3-eu-west-1.amazonaws.com/assets.jipio.com/corporate/
 disqus_shortname:
 #Comment out url when working locally to resolve base urls correctly
-url: http://vinitkumar.me/Simple              
+url: http://jipio.nl
 
 # Owner/author information
 owner:
-  name: changer          
-  avatar:        
-  email:          
+  name: changer
+  avatar:
+  email:
   # Social networking links used in footer. Update and remove as you like.
-  twitter:       
-  github: changer        
-  stackexchange:  
+  twitter:
+  github: changer
+  stackexchange:
   # For Google Authorship https://plus.google.com/authorship
-  google_plus: 
+  google_plus:
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:  
+google_analytics:
 google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
@@ -31,10 +32,10 @@ links:
   - title: Blog
     url: /articles
   - title: Code
-    url: 
+    url:
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    
+timezone:
 future:      true
 pygments:    true
 markdown:    redcarpet
