--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,24 @@ google_analytics: UA-28530539-3
 
 # Links to include in top navigation
 # For external links add external: true
-links:
+nav:
   - title: About
     url: /about
   - title: Blog
-    url: /articles
-  - title: Code
-    url:
+    url: http://blog.jipio.nl
+    external: true
+  - title: Contact
+    url: /contact
+
+subnav:
+  - title: Home
+    url: /
+  - title: Blog
+    url: http://blog.jipio.nl
+    external: true
+  - title: Contact
+    url: /contact
+
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:
