--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Let's help each other
-description:      Share stuff with friends. Help others with useful stuff.
+description:      Share stuff with friends. Help others.
 logo:             //s3-eu-west-1.amazonaws.com/assets.jipio.com/beta/assets/img/favicon.ico
 assets:           //s3-eu-west-1.amazonaws.com/assets.jipio.com/corporate/
 disqus_shortname:
